apps/cce/cce-smtp/overlays/aws-us-west-2-cc-smarsh-dev/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: cce-smtp
spec:
  hosts:
  - smtp-dev.cc.smarsh.us-west-2.aws.smarsh.cloud
  gateways:
  - istio-ingress/apps-https-tcp-gw-ep-mt-smarsh-cc-dev
  tcp:
  - match:
    - port: 25
    route:
    - destination:
        host: cce-smtp
        port:
          number: 8025
